--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div id="board-container">
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+        <div class="spot">
+            <input type="button" class="spot-btn">
+           </div>
+    </div>
+    <input type="reset" value="Reset" id="reset-btn">
 </body>
 </html>
