print winning result

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
            </div>
     </div>
     <input type="reset" value="Reset" id="reset-btn">
+    <div id="result"></div>
 </body>
 </html>
