--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Silkscreen:wght@400;700&family=Cairo:wght@500&display=swap" rel="stylesheet">
     <title>Tic Tac Toe</title>
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
+    <div id="players-container">
+        <div class="players-window">
+            <h3>Player 1</h3>  
+            <label for="player1-input">Enter name:</label>
+            <input type="text" id="player1-input" class="players-input">
+        </div>
+        <div class="players-window">
+            <h3>Player 2</h3> 
+            <label for="player2-input">Enter name:</label>   
+            <input type="text" id="player2-input" class="players-input">  
+        </div>
+    </div>
+    <div id="start-container">
+        <input type="button" value="Start" id="start-btn">
+    </div>
     <div id="board">
         <div class="spot">
             <input type="button" class="spot-btn">
