result pops up end of every game

--- a/index.html
+++ b/index.html
@@ -55,9 +55,14 @@
             <input type="button" class="spot-btn">
            </div>
     </div>
-    <div id="reset-container">
-        <input type="reset" value="Reset" id="reset-btn">
+    <div id="restart-container">
+        <input type="button" value="restart" id="restart-btn">
     </div>    
-    <div id="result"></div>
+    <div id="result-container">
+        <div id="result-banner">
+            <input type="button" value="X" id="exit-result-btn">
+        </div>
+        <div id="result"></div>
+    </div>
 </body>
 </html>
