highlight whose turn it is

--- a/index.html
+++ b/index.html
@@ -26,34 +26,38 @@
     <div id="start-container">
         <input type="button" value="Start" id="start-btn">
     </div>
-    <div id="board">
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
-        <div class="spot">
-            <input type="button" class="spot-btn">
-           </div>
+    <div id="board-players-container">
+        <div id="player1-info"></div>
+        <div id="board">
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+            <div class="spot">
+                <input type="button" class="spot-btn">
+            </div>
+        </div>
+        <div id="player2-info"></div>
     </div>
     <div id="restart-container">
         <input type="button" value="restart" id="restart-btn">
